--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: location
 description: A new flutter plugin project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/heimuya/location
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
